--- a/index.html
+++ b/index.html
@@ -53,6 +53,8 @@
 
     <!-- Cargar el script de Supabase -->
     <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@1.35.1/dist/umd/supabase.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js/dist/umd/supabase.min.js"></script>
+
  
 
     <div id="loanModal" class="modal">
