Millorar el català

--- a/afegir.html
+++ b/afegir.html
@@ -1159,7 +1159,7 @@
         <circle cx="11" cy="11" r="8"></circle>
         <path d="21 21l-4.35-4.35"></path>
       </svg>
-      <span>Buscar</span>
+      <span>Cercar</span>
     </button>
 
     <button class="nav-btn nav-btn-primary" onclick="window.location.href='afegir.html'">
@@ -1167,7 +1167,7 @@
         <line x1="12" y1="5" x2="12" y2="19"></line>
         <line x1="5" y1="12" x2="19" y2="12"></line>
       </svg>
-      <span>Añadir</span>
+      <span>Afegir</span>
     </button>
 
     <button class="nav-btn" onclick="window.location.href='llista.html'">
@@ -1179,7 +1179,7 @@
         <line x1="3" y1="12" x2="3.01" y2="12"></line>
         <line x1="3" y1="18" x2="3.01" y2="18"></line>
       </svg>
-      <span>Lista</span>
+      <span>Llista</span>
     </button>
   </div>
 </body>
