--- a/llista.html
+++ b/llista.html
@@ -345,7 +345,7 @@
         <circle cx="11" cy="11" r="8"></circle>
         <path d="21 21l-4.35-4.35"></path>
       </svg>
-      <span>Buscar</span>
+      <span>Cercar</span>
     </button>
     
     <button class="nav-btn" onclick="window.location.href='afegir.html'">
